Bump versions to at least Java 17, JEE 10, Hibernate 6; fixed failing logic and tests caused by changes in Hibernate 6; catch up Java 17 features such as var and instanceof var